--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,8 @@
 		<title>80x25.org</title>
 	</head>
 	<body>
-		200 OK
+		<div id="console">Loading...</div>
+                <script src="libv86.js"></script>
+                <script src="app.js"></script>
 	</body>
 </html>
